# toy-tensor-language

./: .gitignore  CMakeLists.txt  README.md
doc/: language.md
mlir/include/Conversion/: CMakeLists.txt  Passes.h  Passes.td
mlir/include/Conversion/TTLToLinalg/: TTLToLinalg.h
mlir/include/Conversion/TTLToScalar/: TTLToScalar.h
mlir/include/Conversion/TTLToTensor/: TTLToTensor.h
mlir/include/Dialect/TTL/: CMakeLists.txt  TTLAttributes.h  TTLAttributes.td  TTLDialect.h  TTLDialect.td  TTLOps.h  TTLOps.td  TTLTypes.h  TTLTypes.td
mlir/include/Passes/: TTLPasses.h  TTLPasses.td
mlir/include/Transform/: CMakeLists.txt  TTLPasses.h  TTLPasses.td
mlir/lib/: CMakeLists.txt
mlir/lib/Conversion/: CMakeLists.txt  TTLTypeConverter.h
mlir/lib/Conversion/TTLToLinalg/: CMakeLists.txt  TTLToLinalg.cpp
mlir/lib/Conversion/TTLToScalar/: CMakeLists.txt  TTLToScalar.cpp
mlir/lib/Conversion/TTLToTensor/: CMakeLists.txt  TTLToTensor.cpp
mlir/lib/Dialect/TTL/: CMakeLists.txt  TTLAttributes.cpp  TTLDialect.cpp  TTLOps.cpp  TTLTypes.cpp
mlir/lib/Passes/: CMakeLists.txt  TTLTiling.cpp
mlir/lib/Transform/: CMakeLists.txt  EliminateInitLoops.cpp
mlir/tools/: CMakeLists.txt
mlir/tools/ttl-opt/: CMakeLists.txt  ttl-opt.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/CodeGen/: compare.ttl  def-assign.ttl  float-arith.ttl  for-loop.ttl  func-call.ttl  if-stmt.ttl  integer-arith.ttl  matrix-arith.ttl  matrix-op.ttl  ternary-cond.ttl
test/Conversion/ConvertToLLVM/: compare.mlir  float-arith.mlir  for-loop.mlir  if-stmt.mlir  integer-arith.mlir  matmul.mlir  matrix-arith.mlir  tensor-dim-slice.mlir  tensor-init.mlir
test/Conversion/TTLToLinalg/: matmul.mlir  matrix-arith.mlir
test/Conversion/TTLToScalar/: compare.mlir  float-arith.mlir  for-loop.mlir  if-stmt.mlir  integer-arith.mlir
test/Conversion/TTLToTensor/: dim-slice.mlir  init.mlir
test/Dialect/TTL/: dim-canonicalize.mlir  list-init-canonicalize.mlir  slice-canonicalize.mlir  verifier.mlir
test/Transform/EliminateInitLoops/: init-loop.mlir
test/Transform/Inline/: inline.mlir
test/Transform/LICM/: licm.mlir
ttl-lang/: CMakeLists.txt
ttl-lang/include/AST/: AST.h  ASTBuilder.h  ASTContext.h  ASTVisitor.h
ttl-lang/include/CodeGen/: CodeGen.h
ttl-lang/include/Parser/: TTLANTLRParser.h  TTLParserContext.h
ttl-lang/include/Sema/: Sema.h
ttl-lang/lib/: CMakeLists.txt
ttl-lang/lib/AST/: ASTBuilder.cpp  ASTContext.cpp  CMakeLists.txt
ttl-lang/lib/CodeGen/: CMakeLists.txt  CodeGen.cpp  CodeGenVisitor.cpp  CodeGenVisitor.h
ttl-lang/lib/Parser/: CMakeLists.txt  TTL.g4  TTLANTLRParser.cpp
ttl-lang/lib/Sema/: CMakeLists.txt  ScopeTable.h  Sema.cpp  SemaVisitor.cpp  SemaVisitor.h
ttl-lang/tools/: CMakeLists.txt
ttl-lang/tools/ttl-cc/: CMakeLists.txt  ttl-cc.cpp
ttlc/: CMakeLists.txt  ttlc.py
